# CRM

./: .env.production.example  .gitignore  .vercelignore  App.tsx  DEPLOYMENT_GUIDE.md  ENHANCED_ACCOUNT_FORM_GUIDE.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  VIEW_ACCESS_FEATURE_GUIDE.md  comprint.html  comprint_crm_dump.sql  deploy-vercel.sh  deploy.sh  index.css  index.html  index.tsx  metadata.json  migration.md  package-lock.json  package.json  pyproject.toml  requirements.txt  router.tsx  server.js  types.ts  vercel.json  vite.config.ts
backend/: .env  ANALYTICS_GUIDE.md  COMPLETE_SUPABASE_FIX.sql  MIGRATION_OPTIONS.md  URGENT_SUPABASE_MIGRATION.sql  add_contact_fields.sql  add_dashboard_preferences.py  add_product_manager_column.sql  add_product_manager_ids_column.sql  add_requirement_columns.sql  add_sales_order_fields.sql  add_stock_column.sql  add_tag_column.sql  add_user_tag_column.sql  add_view_access_local.py  add_view_access_migration.sql  alembic.ini  analytics_queries.sql  create_superadmin.py  fix_view_access_supabase.sql  incremental_migration.sql  init_db.sql  leads_migration.sql  migration_roles_activity.sql  migration_v2.sql  migration_v3_quote_features.sql  pyproject.toml  requirements.txt  run.py  seed_dashboard_analytics.sql  seed_dashboard_data_fixed.sql  seed_data.sql  seed_sample_data.sql  supabase_migration.sql
backend/alembic/: env.py
backend/alembic/versions/: 20260218_184243_iimukfaipc36_enable_uuid.py  20260218_184244_d8rssyg78clp_users.py  20260218_184245_q2sieczfy5f3_roles.py  20260218_184246_952qs98dj1h2_products.py  20260218_184247_hnsye45jlwyt_email_templates.py  20260218_184248_c2zkz7gpala3_notifications.py  20260218_184249_urq3jqqxoo6a_role_permissions.py  20260218_184250_7q32csgkpwmu_partners.py  20260218_184251_lqyyk7bob5bn_activity_logs.py  20260218_184252_dfrkcp1o752c_accounts.py  20260218_184253_trgmjrvsvhge_contacts.py  20260218_184254_5hqnp1zprabv_leads.py  20260218_184255_qmkw4q3y3h22_tasks.py  20260218_184256_j3zjhx3tv5f4_emails.py  20260218_184257_kw8dn7gssdzn_calendar_events.py  20260218_184258_sinm26rcbxjz_quote_terms.py  20260218_184300_kdgneknnm8tb_carepacks.py  20260218_184301_wg09g53bhzk0_deals.py  20260218_184302_3wp1p96bv1ln_quotes.py  20260218_184303_3i7951jum9km_lead_activities.py  20260218_184304_qv03u53t048j_sales_entries.py  20260218_184305_4xk93kxhecro_deal_line_items.py  20260226_add_deal_id_to_quotes.py  (+12 more)
backend/app/: config.py  database.py  dependencies.py  exceptions.py  main.py
backend/scripts/: README.md  init_db.sql  migrate.py  migrate_from_supabase.py  seed_data.py
(+399 files in other folders)
