[project]
name = "comprint-crm-api"
version = "1.0.0"
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.115.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.31.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0,<5.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "eval-type-backport>=0.3.1",
]
